salesforce/force-app/main/default/objects/Credentialing_Application__c/Credentialing_Application__c.object-meta.xml
<CustomObject>
    <description>Credentialing POC — Credentialing Application</description>
    <label>Credentialing Application</label>
    <pluralLabel>Credentialing Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <displayFormat>APP-{00000}</displayFormat>
        <label>Credentialing Application Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>