salesforce/force-app/main/default/objects/Credentialing_Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description></description>
    <label>Application Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>New</fullName>
        </value>
        <value>
            <fullName>Recred</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>