salesforce/force-app/main/default/objects/Credentialing_Application__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <description>Outreach chase attempts</description>
    <label>Attempt Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>