salesforce/force-app/main/default/objects/Credentialing_Application__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description></description>
    <label>Path</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>CAQH</fullName>
        </value>
        <value>
            <fullName>In_House</fullName>
            <label>In House</label>
        </value>
        <value>
            <fullName>Facility</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>