salesforce/force-app/main/default/objects/Credentialing_Application__c/fields/PSV_Ran_At__c.field-meta.xml
<CustomField>
    <fullName>PSV_Ran_At__c</fullName>
    <label>PSV Ran At</label>
    <type>DateTime</type>
</CustomField>