salesforce/force-app/main/default/objects/Credentialing_Application__c/fields/PSV_Status__c.field-meta.xml
<CustomField>
    <fullName>PSV_Status__c</fullName>
    <label>PSV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>not_started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>in_progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>exception</fullName><default>false</default><label>Exception</label></value>
            <value><fullName>human_review</fullName><default>false</default><label>Human Review</label></value>
            <value><fullName>credentialing_ready</fullName><default>false</default><label>Credentialing Ready</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>