salesforce/force-app/main/default/objects/Credentialing_Application__c/fields/Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Score__c</fullName>
    <label>Credentialing Readiness</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>