salesforce/force-app/main/default/objects/Credentialing_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description></description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Draft</fullName>
        </value>
        <value>
            <fullName>Incomplete</fullName>
        </value>
        <value>
            <fullName>In_Review</fullName>
            <label>In Review</label>
        </value>
        <value>
            <fullName>Pending_Committee</fullName>
            <label>Pending Committee</label>
        </value>
        <value>
            <fullName>Approved</fullName>
        </value>
        <value>
            <fullName>Denied</fullName>
        </value>
        <value>
            <fullName>Withdrawn</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>