salesforce/force-app/main/default/objects/Credentialing_Application__c/listViews/Incomplete_Chase.listView-meta.xml
<ListView>
    <fullName>Incomplete_Chase</fullName>
    <columns>NAME</columns>
    <columns>Provider__c</columns>
    <columns>Subject_Type__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Path__c</columns>
    <columns>Attempt_Count__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Incomplete</value>
    </filters>
    <label>Incomplete (chase)</label>
</ListView>