salesforce/force-app/main/default/objects/Credentialing_Application__c/listViews/Pending_Committee.listView-meta.xml
<ListView>
    <fullName>Pending_Committee</fullName>
    <columns>NAME</columns>
    <columns>Provider__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Path__c</columns>
    <columns>Subject_Type__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending_Committee</value>
    </filters>
    <label>Pending Committee</label>
</ListView>